fixed 'white space' issue on home page

--- a/src/styles/freelancer.scss
+++ b/src/styles/freelancer.scss
@@ -10,6 +10,7 @@ $headings-font-weight: 700 !default;
 .p-padding {
   padding-top: 6rem;
   padding-bottom: 6rem;
+  min-height: 92rem;
 }
 
 .m-Pageheading_divider {
